--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ exclude = ["**/node_modules",
     "src/experimental",
     "src/typestubs"
 ]
+typeCheckingMode = "strict"
 stubPath = "src/stubs"
 reportMissingImports = "error"
 reportMissingTypeStubs = false
